# clogg

./: .gitignore  CMakeLists.txt  README.md  TODO.md  compile_commands.json  makefile
include/: clogg.h  color.h
src/: clogg.c
test/: main.test.c  makefile
